--- a/src/components/_core/util.sass
+++ b/src/components/_core/util.sass
@@ -13,6 +13,7 @@
 		opacity: 1
 		visibility: visible
 		pointer-events: visible
+		// background: rgba($color: $black, $alpha: .5)
 .overflow
 	overflow: hidden
 .lcl
