--- a/src/components/banner/banner.pug
+++ b/src/components/banner/banner.pug
@@ -192,13 +192,13 @@ section.home-banner
 					p 8.601.944
 			form.from-slide(action="", method="post") 
 				.form-group 
-					span.fas.fa-user
+					img(src="./images/icons/user-gray.png", alt="")
 					input.form-control(type="text" placeholder="Họ và tên")
 				.form-group 
-					span.fas.fa-phone-alt
+					img(src="./images/icons/phone-gray.png", alt="")
 					input.form-control(type="text" placeholder="Số điện thoại")
 				.form-group 
-					span.fas.fa-envelope
+					img(src="./images/icons/mail.png", alt="")
 					input.form-control(type="text" placeholder="Mã nhân viên tư vấn")
 				button.btn.btn-login(type="submit") 
 					span Đăng ký
