--- a/src/components/product-general/product-catelog/index.pug
+++ b/src/components/product-general/product-catelog/index.pug
@@ -1,15 +1,16 @@
-.product-catelog
+.product-catelory_list
 	h2.title.title_small.title_small-white Danh mục sản phẩm
-	.side-navigation-wrap
-		ul.side-navigation
-			li.active
-				.accordion-title
+	.navigation
+		ul.navigation-list
+			li.navigation-list_item.active
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-0.png", alt="")
+						img.desktop(src="./images/producttion/main-product-0.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-0.png", alt="")
 					.contnet
 						a(href='') Vay kinh doanh
 						em.lnr.lnr-chevron-down
-				ul.nav-sub.show  
+				ul.navigation-sub.show  
 					li
 						a(href="") 
 							p Vay phát triển kinh tế gia đình
@@ -18,45 +19,60 @@
 						a(href="") 
 							p Vay bổ sung vốn lưu động
 							em.lnr.lnr-chevron-right
-			li
-				.accordion-title
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-1.png", alt="")
+						img.desktop(src="./images/producttion/main-product-1.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-1.png", alt="")
 					.contnet
 						a(href='') Vay tiêu dùng
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+				ul.navigation-sub  
+					li
+						a(href="") 
+							p Vay phát triển kinh tế gia đình
+							em.lnr.lnr-chevron-right
+					li
+						a(href="") 
+							p Vay bổ sung vốn lưu động
+							em.lnr.lnr-chevron-right
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-2.png", alt="")
+						img.desktop(src="./images/producttion/main-product-2.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-2.png", alt="")
 					.contnet
 						a(href='') Vay bằng sổ TK
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-3.png", alt="")
+						img.desktop(src="./images/producttion/main-product-3.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-3.png", alt="")
 					.contnet
 						a(href='') Dịch vụ khác
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-4.png", alt="")
+						img.desktop(src="./images/producttion/main-product-4.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-4.png", alt="")
 					.contnet
 						a(href='') Vay nông nghiệp
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-5.png", alt="")
+						img.desktop(src="./images/producttion/main-product-5.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-5.png", alt="")
 					.contnet
 						a(href='') Vay ô tô
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
-						img(src="./images/producttion/main-product-6.png", alt="")
+						img.desktop(src="./images/producttion/main-product-6.png", alt="")
+						img.mobile(src="./images/producttion/main-pro-mb-6.png", alt="")
 					.contnet
 						a(href='') Vay bất động sản
 						em.lnr.lnr-chevron-down
