--- a/src/components/product-general/signup-loan/index.pug
+++ b/src/components/product-general/signup-loan/index.pug
@@ -1,10 +1,9 @@
-.right-box 
+.left-box 
     h1.title.title_small.title_small-white Chỉ 30 phút có ngay khoản vay
-    .right-box_content 
+    .left-box_content 
         ul 
             li 
-                p 
-                    |Bạn đang cần đến một khoản tiền nhưng sổ tiết kiệm của bạn chưa đến hạn?
+                p Bạn đang cần đến một khoản tiền nhưng sổ tiết kiệm của bạn chưa đến hạn?
             li
                 p Bạn có tất toán sổ tiết kiệm mà không được hưởng toàn bộ khoản lãi sắp đến hạn?
             li 
