--- a/src/components/product-general/tool/index.pug
+++ b/src/components/product-general/tool/index.pug
@@ -1,4 +1,4 @@
-.left-box
+.right-box
     .card-tool-box 
         .card-switcher 
             ul.header-switcher.d-flex.align-center 
@@ -34,7 +34,7 @@
                                 td 
                                     input.form-control(type='text' disabled='' value='8.601.944')
                                     span.input-suffix đ
-                    .btn.btn-login
+                    .btn-login
                         span Tiếp tục
                     .desc 
                         p Ví dụ: Số tiền vay 500 triệu - chu kỳ trả trong 60 tháng - lãi suất vay 7%/năm - Tổng tiền phải trả 602.476.200đ - Tổng lãi phải trả 102.476.200đ.
@@ -64,32 +64,33 @@
                             td Bán ra
                         tr 
                             td 
+                            
                                 img(src="./images/icons/usd.png", alt="")
-                                span USD
+                                | USD
                             td 22,650
                             td 22,850
                         tr 
                             td 
                                 img(src="./images/icons/vn.png", alt="")
-                                span VND 
+                                | VND 
                             td --
                             td --
                         tr 
                             td 
                                 img(src="./images/icons/canada.png", alt="")
-                                span CAD
+                                | CAD
                             td 17,409
                             td 18,137
                         tr 
                             td 
                                 img(src="./images/icons/euro.png", alt="")
-                                span EUR
+                                | EUR
                             td 24,837
                             td 26,207
                         tr 
                             td 
                                 img(src="./images/icons/jp.png", alt="")
-                                span EUR
+                                | JPY
                             td 191,71
                             td 203,80
                     .desc 
@@ -99,7 +100,7 @@
                 li 
                     em.lnr.lnr-arrow-left
                 li 
-                    p Đăng ký tư vấn
+                    p Đăng ký nhận tư vấn
             ul.nav-list.d-flex.align-center
                 li 
                     p Số tiền 
@@ -112,16 +113,16 @@
                     p 8.601.944
             form.from-slide(action="", method="post") 
                 .form-group 
-                    span.fas.fa-user
+                    img(src="./images/icons/user-gray.png", alt="")
                     input.form-control(type="text" placeholder="Họ và tên")
                 .form-group 
-                    span.fas.fa-phone-alt
+                    img(src="./images/icons/phone-gray.png", alt="")
                     input.form-control(type="text" placeholder="Số điện thoại")
                 .form-group 
-                    span.fas.fa-envelope
+                    img(src="./images/icons/mail.png", alt="")
                     input.form-control(type="text" placeholder="Mã nhân viên tư vấn")
                 button.btn.btn-login(type="submit") 
-                    span Đăng ký
+                    p Đăng ký
         .dot 
             span.active 
             span
