--- a/src/pages/product-general.pug
+++ b/src/pages/product-general.pug
@@ -12,10 +12,12 @@ block main
 			.wrapper-content 
 				include ../components/product-general/signup-loan/index.pug
 				include ../components/product-general/tool/index.pug
-	section.section.loan
+	section.section.tool-card-product
 		.container 
-			.loan-promtion-block 
+			.product-catelogry
 				include ../components/product-general/product-catelog/index.pug
+				#tool-ulitily-mobile 
+					h2.title.title_small.title_small-white Tiện ích
 				include ../components/product-general/promotion-loan/index.pug
 	section.section.atm-location 
 		.container
