--- a/src/components/product-general/tool/style.sass
+++ b/src/components/product-general/tool/style.sass
@@ -1,8 +1,99 @@
-.left-box
-    width: 584px
+.right-box
     position: absolute
     top: 0
     right: 0
+    width: 548px
+    height: 100%
     .card-tool-box
-        position: static
         width: 100%
+        height: 100%
+        position: static
+        border-radius: 0
+        background: $white
+        padding: 30px
+        .card-switcher
+            .header-switcher
+                margin-bottom: 32px
+                li
+                    font-size: r(20px)
+            .panel
+                .from-slide-loan
+                    form
+                        .form-group
+                            label
+                                font-size: r(20px)
+                            #amount
+                                font-size: r(32px)
+                                width: 150px
+                                text-align: right
+                    .range-slider__label
+                        margin-bottom: 24px
+                        &__min,
+                        &__max
+                            span
+                                font-size: r(20px)
+                    .period-wraper
+                        margin-bottom: 24px
+                        table
+                            tr
+                                td
+                                    font-size: r(20px)
+                                &:nth-child(2)
+                                    td
+                                        &:first-child
+                                            input.form-control
+                                                font-size: r(20px)
+                                                background: #F9FAFC
+                                                border-radius: 40px
+                                        &:last-child
+                                            input.form-control
+                                                font-size: r(24px)
+                                                background: #F9FAFC
+                                                border-radius: 40px
+                    .btn-login
+                        cursor: pointer
+                        justify-content: center
+                        margin-top: 0
+                        margin-bottom: 24px
+                        height: 58px
+
+            #toolpanel-2
+                .table-box
+                    max-width: unset
+                    table
+                        tr
+                            td
+                                font-size: r(20px)
+                                padding: 8px 0
+                                vertical-align: middle
+                                img
+                                    width: 24px
+                                    height: 24px
+                                    margin-right: 10px
+                    .desc
+                        p
+                            font-size: 1rem
+        .from-slide-advise
+            .header-advise
+                li
+                    p
+                        font-size: r(24px)
+            .nav-list
+                li
+                    p
+                        font-size: r(20px)
+            .from-slide
+                .form-group
+                    background: #F9FAFC
+                    .form-control
+                        font-size: r(20px)
+                .btn-login
+                    padding: 16px 24px !important
+                    height: 58px
+        .dot
+            position: absolute
+            bottom: 24px
+            left: 50%
+            transform: translateX(-50%)
+    @media screen and ( max-width: 768.98px )
+        display: none
