--- a/src/components/product-general/signup-loan/style.sass
+++ b/src/components/product-general/signup-loan/style.sass
@@ -48,6 +48,9 @@
                     padding: 16px 38px !important
                     p
                         font-size: r(18px)
+    @media screen and ( max-width: 1366.98px)
+        padding-bottom: 0
+        height: 516px
     @media screen and ( max-width: 768.98px )
         background: none
         box-shadow: none
@@ -55,7 +58,9 @@
         height: auto
         padding-bottom: r(16px)
         .wrapper-content
+            max-width: 100%
             .left-box
+                max-width: 100%
                 .title
                     padding-top: 32px !important
                     color: $black !important
