--- a/src/components/product-general/tool/style.sass
+++ b/src/components/product-general/tool/style.sass
@@ -95,5 +95,71 @@
             bottom: 24px
             left: 50%
             transform: translateX(-50%)
+    @media screen and ( max-width: 1366.98px )
+        .card-tool-box
+            padding: 16px
+            .card-switcher
+                .header-switcher
+                    margin-bottom: 16px
+                    li
+                        font-size: 1rem
+                .panel
+                    .from-slide-loan
+                        form
+                            .form-group
+                                label
+                                    font-size: r(15px)
+                                #amount
+                                    font-size: r(24px)
+                        .range-slider__label
+                            margin-bottom: 16px
+                            &__min,
+                            &__max
+                                span
+                                    font-size: r(15px)
+                        .period-wraper
+                            margin-bottom: 32px
+                            table
+                                tr
+                                    td
+                                        font-size: r(15px)
+                                    &:nth-child(2)
+                                        td
+                                            &:first-child
+                                                input.form-control
+                                                    font-size: r(15px)
+                                            &:last-child
+                                                input.form-control
+                                                    font-size: r(18px)
+                #toolpanel-2
+                    .table-box
+                        table
+                            tr
+                                td
+                                    font-size: r(15px)
+                        .desc
+                            p
+                                font-size: 12px
+            .from-slide-advise
+                .header-advise
+                    li
+                        p
+                            font-size: r(18px)
+                .nav-list
+                    li
+                        p
+                            font-size: r(15px)
+                .from-slide
+                    .form-group
+                        .form-control
+                            font-size: r(15px)
+                    .btn-login
+                        margin-top: 32px
+            .dot
+                bottom: 0px
+    @media screen and ( max-width: 1100.98px )
+        width: 50%
+        .card-tool-box
+            padding: 0
     @media screen and ( max-width: 768.98px )
         display: none
