--- a/src/components/product-general/promotion-loan/style.sass
+++ b/src/components/product-general/promotion-loan/style.sass
@@ -25,6 +25,15 @@
                     display: -webkit-inline-box
             .list-wrapper
                 padding-top: 1rem
+
+    @media screen and ( max-width: 1024.98px)
+        .card-product-promotion
+            flex: 1
+            width: 50%
+            .tag-list
+                padding-left: 0
+                .list-wrapper
+                    &_item
     @media screen and ( max-width: 768.98px )
         .card-product-promotion
             .tag-list
