--- a/src/components/priority-user/content/style.sass
+++ b/src/components/priority-user/content/style.sass
@@ -104,6 +104,7 @@
                 margin-bottom: 20px
                 .left-box
                     height: 150px
+                    position: relative
                     @media screen and ( max-width: 575.98px )
                         height: 106px
                     a 
