Fix lỗi đụng class + sửa hiệu ứng

--- a/src/components/contact/content/index.pug
+++ b/src/components/contact/content/index.pug
@@ -37,6 +37,9 @@ section.section.contact-page
                 include ../../faq/mini-faq/index.pug
             .col-12.col-lg-12.col-xl-8 
                 .form-box
-                    include ../../tabs/index.pug
+                    .tabs
+                        include ../../tabs/index.pug
+                        include ../form1/index.pug
+                        include ../form2/index.pug
         
 
