--- a/src/components/tabs/index.pug
+++ b/src/components/tabs/index.pug
@@ -1,10 +1,7 @@
 
-.tabs 
-    ul.tab-list.d-flex
-        li.active(rel="panel-1") Gửi email
-        li(rel="panel-2") Đặt lịch hẹn
-    include ../contact/form1/index.pug
-    include ../contact/form2/index.pug
+ul.tab-list.d-flex
+    li.active(rel="panel-1") Title panel 1
+    li(rel="panel-2") Title panel 2
                             
         
 
