--- a/src/components/faq/content/faq.pug
+++ b/src/components/faq/content/faq.pug
@@ -6,6 +6,9 @@ section.section.faq-content
                     .faq_title
                         h2.title_big.title_big-black.text-center Câu hỏi thường gặp
             .row
+                .tabs
+                    include ../../tabs/index.pug
+            .row
                 form.group-iput(action="").search-box.text-center
                     .form-group
                         input.form-control(type="text" placeholder="Vấn đề bạn đang gặp phải")
@@ -16,34 +19,64 @@ section.section.faq-content
                             option(value="") Sản phẩm tiền gửi
                             option(value="") Sản phẩm tiền vay
         .faq-main-content-box
-            .row
-                .main-content
-                    ul.list-questions 
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Khách hàng có thể mở tài khoản thanh toán với những loại tiền gì tại HDBank?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Người khiếm thị không biết đọc, biết viết mở và sử dụng TK TGTT tại HDBank như thế nào?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+            //- .row
+            .main-content.panel#panel-1.active
+                ul.list-questions 
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Khách hàng có thể mở tài khoản thanh toán với những loại tiền gì tại HDBank?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Người khiếm thị không biết đọc, biết viết mở và sử dụng TK TGTT tại HDBank như thế nào?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+            .main-content.panel#panel-2
+                ul.list-questions 
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Khách hàng có thể mở tài khoản thanh toán với những loại tiền gì tại HDBank?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Người khiếm thị không biết đọc, biết viết mở và sử dụng TK TGTT tại HDBank như thế nào?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+                    li.item-question
+                        .title-question-box
+                            img(src="./images/faq/Question.png")
+                            span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
+                            span.btn-arrow
+                        .content-answer-box 
+                            p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
