--- a/src/components/priority-user/content/style.sass
+++ b/src/components/priority-user/content/style.sass
@@ -117,6 +117,7 @@
                             background: linear-gradient(360deg, #000000 -3.93%, rgba(0, 0, 0, 0) 39.15%), url(.png)
                             filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.12))
                             border-radius: 12px
+                            // transition: all 0.5s ease-in-out
                             // @media screen and ( max-width: 575.98px )
                             //     height: auto
                         .name
@@ -199,6 +200,7 @@
                                         transform: rotate(90deg);
                                         margin: 0 0 0 10px;
                     .right-box
+                        display: block
                         .info-box
                             display: block
                             
