--- a/src/pages/contact.pug
+++ b/src/pages/contact.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
 
 block var
-	- var title = 'LIên hệ'
+	- var title = 'Liên hệ'
 	- var bodyClass = 'contactpage'
 
 block main
