--- a/src/components/banner/banner.pug
+++ b/src/components/banner/banner.pug
@@ -86,16 +86,17 @@ section.home-banner
 									em.lnr.lnr-chevron-right
 		.swiper-pagination
 	.marquee 
-		ul.marquee-list
-			li.marquee-list_item
-				span 🔥 
-				p Miễn phí thường niên khi đăng ký thẻ VISA HDBank
-			li.marquee-list_item
-				span 🛍️ 
-				p Hoàn tiền lên đến 500K khi thanh toán qua thẻ Vietjet VISA
-			li.marquee-list_item
-				span ⭐️ 
-				p Đăng ký hôm nay - trúng ngay táo xịn. Mở tài khoản 5 phút nhanh chóng
+		div 
+			.marquee_text
+				.marquee-list_item
+					span 🔥 
+					p Miễn phí thường niên khi đăng ký thẻ VISA HDBank
+				.marquee-list_item
+					span 🛍️ 
+					p Hoàn tiền lên đến 500K khi thanh toán qua thẻ Vietjet VISA
+				.marquee-list_item
+					span ⭐️ 
+					p Đăng ký hôm nay - trúng ngay táo xịn. Mở tài khoản 5 phút nhanh chóng
 	.card-tool-box 
 		.card-switcher 
 			ul.header-switcher.d-flex.align-center 
