--- a/src/components/nimish-card/banner/index.pug
+++ b/src/components/nimish-card/banner/index.pug
@@ -6,7 +6,11 @@ section.page-banner
                     .slide-inner.slide-inner_desktop 
                         .slide-inner__img
                             img(src="./images/producttion/hero-banner.png", alt="")
+                            a.btn-login(href="") 
+                                p Mở thẻ ngay
                     .slide-inner.slide-inner_mobile 
                         .slide-inner__img
                             img(src="./images/producttion/hero-banner-mb.png", alt="")
+                            a.btn-login(href="") 
+                                p Mở thẻ ngay
     .swiper-pagination
