--- a/src/components/product-general/signup-loan/style.sass
+++ b/src/components/product-general/signup-loan/style.sass
@@ -51,6 +51,12 @@
     @media screen and ( max-width: 1366.98px)
         padding-bottom: 0
         height: 516px
+    @media screen and ( max-width: 1024.98px )
+        .wrapper-content
+            .left-box
+                max-width: unset
+                width: 50%
+                padding-right: 30px
     @media screen and ( max-width: 768.98px )
         background: none
         box-shadow: none
@@ -60,7 +66,8 @@
         .wrapper-content
             max-width: 100%
             .left-box
-                max-width: 100%
+                width: 100%
+                padding-right: 0
                 .title
                     padding-top: 32px !important
                     color: $black !important
