--- a/src/components/product-insurance/insurance-1/index.pug
+++ b/src/components/product-insurance/insurance-1/index.pug
@@ -1,10 +1,18 @@
 section.section.insurance-1 
-	.wrapper-container  
-		h1.title.title_small.title_small-black Bảo vệ gia đình toàn diện
+	.container  
 		.wraper-content 
-			p Bảo toàn thu nhập gia đình khi tử vong/ thương tật toàn bộ vĩnh viễn. Nhận được khoản thu nhập đều đặn hàng năm bù đắp vào nguồn thu nhập định kỳ khi chẳng may có biến cố không mong muốn xảy ra với người trụ cột trong gia đình. Thêm bảo vệ cho người được bảo hiểm của sản phẩm chính. Luôn được bảo đảm chi trả quyền lợi ngay cả khi hợp đồng bảo hiểm chính chấm dứt. 
+			h1.title.title_small.title_small-black Bảo vệ gia đình toàn diện
+
+			p Bảo toàn thu nhập gia đình khi tử vong/ thương tật toàn bộ vĩnh viễn. 
+				br
+				|Nhận được khoản thu nhập đều đặn hàng năm bù đắp vào nguồn thu nhập định kỳ khi chẳng may có biến cố không mong muốn xảy ra với người trụ cột trong gia đình. 
+				br
+				|Thêm bảo vệ cho người được bảo hiểm của sản phẩm chính. 
+				br
+				|Luôn được bảo đảm chi trả quyền lợi ngay cả khi hợp đồng bảo hiểm chính chấm dứt. 
 			.button-box
-				a.btn-suport(href="") Tôi cần tư vấn
+				a.btn-suport(href="") 
+					p Tôi cần tư vấn
 				a.btn-login(href="") 
 					p Đăng ký ngay
 
