--- a/src/components/product-insurance/product-catelog/index.pug
+++ b/src/components/product-insurance/product-catelog/index.pug
@@ -1,29 +1,29 @@
-.product-catelog
+.product-catelory_list
 	h2.title.title_small.title_small-white Danh mục sản phẩm
-	.side-navigation-wrap
-		ul.side-navigation
-			li.active
-				.accordion-title
+	.navigation
+		ul.navigation-list
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
 						img(src="./images/producttion/bh-1.png", alt="")
 					.contnet
 						a(href='') Bảo hiểm nhânthọ
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+			li.navigation-list_item
+				.navigation-list_item__title
 					.img 
 						img(src="./images/producttion/bh-2.png", alt="")
 					.contnet
 						a(href='') Bảo hiểm nhân thọ FWD
 						em.lnr.lnr-chevron-down
-			li
-				.accordion-title
+			li.navigation-list_item.active
+				.navigation-list_item__title
 					.img 
 						img(src="./images/producttion/bh-3.png", alt="")
 					.contnet
 						a(href='') Bảo hiểm phi nhân thọ
 						em.lnr.lnr-chevron-down
-				ul.nav-sub.show  
+				ul.navigation-sub.show  
 					li
 						a(href="") 
 							p Bảo hiểm nhà tư nhân
