--- a/src/components/promotion/atm/style.sass
+++ b/src/components/promotion/atm/style.sass
@@ -156,16 +156,19 @@
 					color: $white
 				span
 					color: $white
-	@media screen and ( max-width: 768.98px )
+	@media screen and ( max-width: 992.98px )
 		.right-block
-			padding: 24px
-			margin-bottom: 24px
 			.tabs
 				.group-iput
 					.form-group
 						width: 33.33%
 						.form-control
 							width: 100%
+	@media screen and ( max-width: 768.98px )
+		.right-block
+			padding: 24px
+			margin-bottom: 24px
+			.tabs
 				.panel
 					&_list
 						&__item
