--- a/src/pages/product-insurance.pug
+++ b/src/pages/product-insurance.pug
@@ -8,9 +8,9 @@ block main
 	include ../components/breakcrumb/breakcrumb.pug
 	include ../components/product-insurance/banner/index.pug
 	include ../components/product-insurance/insurance-1/index.pug
-	section.section.loan
+	section.section.tool-card-product.insurance
 		.container 
-			.loan-promtion-block 
+			.product-catelogry 
 				include ../components/product-insurance/product-catelog/index.pug
 				include ../components/product-insurance/promotion-loan/index.pug
 	section.section.atm-location 
