--- a/src/components/_core/reset.sass
+++ b/src/components/_core/reset.sass
@@ -17,6 +17,7 @@ html
 	-webkit-text-size-adjust: 100%
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 	scroll-behavior: smooth
+	-webkit-font-smoothing: antialiased
 
 body
 	font-weight: 400
@@ -182,7 +183,7 @@ select.form-control
 	position: relative !important
 	background-image: url('../images/icons/select.png') !important
 	background-repeat: no-repeat !important
-	background-position: 5% !important
+	background-position: 14px !important
 	border: none !important
 
 button, [type="button"], [type="reset"], [type="submit"]
