--- a/src/components/page-banner/style.sass
+++ b/src/components/page-banner/style.sass
@@ -3,15 +3,34 @@
     .slide-inner
         width: 100%
         &__img
+            position: relative
             width: 100%
             img
                 width: 100%
+            .btn-login
+                position: absolute
+                bottom: 68px
+                left: 16%
         &_desktop
             @media screen and ( max-width: 575.98px )
                 display: none
         &_mobile
+            .slide-inner__img
+                +img-ratio(466/375)
+            .btn-login
+                width: 133px
+                height: 44px
+                bottom: 40px
+                padding: 8px 0
+                p
+                    font-size: r(14px)
+                    white-space: nowrap
+                    margin-left: 0
+                &::after
+                    display: none
             @media screen and ( min-width: 576px )
                 display: none
+
     .swiper-pagination
         bottom: 16px
         left: 50%
