--- a/src/components/banner/banner.pug
+++ b/src/components/banner/banner.pug
@@ -86,7 +86,7 @@ section.home-banner
 									em.lnr.lnr-chevron-right
 		.swiper-pagination
 	.marquee 
-		div 
+		.marquee-wrapper  
 			.marquee_text
 				.marquee-list_item
 					span 🔥 
