--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -84,14 +84,14 @@
 		backdrop-filter: blur(30px)
 		border-radius: 12px
 		z-index: 10
-		padding: 8px 0
-		div
+		.marquee-wrapper
+			padding: 8px 24px
 			width: 100%
 			.marquee_text
 				display: flex
 				align-items: center
 				margin: 0
-				padding-left: 0
+				overflow: hidden
 				.js-marquee-wrapper
 					display: flex
 					.js-marquee
@@ -120,9 +120,17 @@
 	@media ( max-width: 1366.98px )
 		.hero-image
 			width: 100%
-			height: 100vh
 			a
 				height: 100%
 				img
 					width: 100%
 					height: 100%
+	@media screen and ( max-width: 768.98px )
+		.hero-image
+			a
+				+img-ratio(645/768)
+	@media screen and ( max-width: 575.98px )
+		.hero-image
+			height: calc( 100vh - 124px )
+			a
+				+img-ratio(645/575)
