--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -13,6 +13,7 @@ html(lang="en")
 		link(rel='shortcut icon' type='image/png' href='favicon.ico')
 		title #{title}
 	body(class=bodyClass)
+		include ../components/mobile-popup/mobile-popup.pug
 		block header
 			include ../components/global/header/header.pug
 		main
