--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -72,7 +72,6 @@
 								font-size: 1rem
 	.marquee
 		position: relative
-		overflow: hidden
 		position: absolute
 		top: 24px
 		left: 50%
@@ -84,10 +83,11 @@
 		backdrop-filter: blur(30px)
 		border-radius: 12px
 		z-index: 10
-		padding: 8px 0
-		div
+		.marquee-wrapper
+			padding: 8px 24px
 			width: 100%
 			.marquee_text
+				overflow: hidden
 				display: flex
 				align-items: center
 				margin: 0
