--- a/src/components/about/banner/style.sass
+++ b/src/components/about/banner/style.sass
@@ -1,4 +1,12 @@
 .banner
     .banner-video
-        
-    
+        &.desktop
+            width: 100%
+            height: 550px
+        &.mobile
+            width: 100%
+            height: 210px
+        #player
+            width: 100%
+            height: 100%
+            object-fit: cover
