--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -131,6 +131,6 @@
 				+img-ratio(645/768)
 	@media screen and ( max-width: 575.98px )
 		.hero-image
-			height: calc( 100vh - 124px )
+			height: 100%
 			a
 				+img-ratio(645/575)
